fixed overflow handling

--- a/client/src/components/Searchbar/Searchbar.module.css
+++ b/client/src/components/Searchbar/Searchbar.module.css
@@ -29,12 +29,25 @@
 
 .dropdown{
     position: absolute;
-    width: 100%;
+    width: 70%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    width: 200px;
+    max-height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
     display:none;
     align-items: center;
     flex-direction: column;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    scrollbar-width: thin;
+    scrollbar-color: #D4DCFF #4C5454;
+}
+
+.dropdown::-webkit-scrollbar{
+    display: none;
 }
 
 .searchbar:focus-within .dropdown{
@@ -43,9 +56,10 @@
 
 .dropdown a{
     text-decoration: none;
+    text-align: center;
     color:white;
     background-color: #941C2F;
-    width: 60%;
+    width: 100%;
     padding: 10px 5%;
     z-index: 20;
     transition: background-color 0.5s cubic-bezier(0.075, 0.82, 0.165, 1), color 0.2s ease-in-out;
